# HighPerformanceImageProcessing

./: .gitignore  AAST_CLUSTER_GUIDE.md  BRANCH_COMPARISON.md  CMakeLists.txt  CUDA_BRANCH_SUMMARY.md  DOWNLOAD_LIBS.md  FIX_CLUSTER.md  MPI_CRITERIA_EVALUATION.md  MPI_OVERLAP_SUMMARY.md  MPI_REQUIREMENTS_ANALYSIS.md  Makefile  Makefile.cluster  OPENMP_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICK_FIX.md  QUICK_FIX_CUDA.md  QUICK_START.md  QUICK_START_CLUSTER.md  README.md  README_CLUSTER.md  build_cluster.sh  build_cluster_aast.sh  build_cluster_simple.sh  check_cluster_setup.sh  check_cuda.sh  find_cuda.sh  fix_encoding.py  submit.gpu  submit.gpu.profile  submit.gpu.timed  submit_cuda.pbs  submit_cuda.sh  temp_main.cpp  temp_mpi.cpp
docs/: BRANCH_COMPARISON.md  CLUSTER_BUILD_GUIDE.md  CUDA_IMPLEMENTATION.md  MPI_IMPLEMENTATION.md  MPI_OVERLAP_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICK_START.md  USAGE_GUIDE.md
include/: color_operations.h  cuda_kernels.cuh  cuda_utils.h  edge_detection.h  edge_detection_cuda.h  edge_detection_mpi.h  filters.h  filters_cuda.h  filters_mpi.h  geometric.h  image.h  morphological.h  mpi_utils.h  noise.h  point_operations.h  point_operations_mpi.h
input/: README.txt
output/: README.txt
src/: color_operations.cpp  cuda_kernels.cu  cuda_utils.cpp  edge_detection.cpp  edge_detection_cuda.cpp  edge_detection_mpi.cpp  filters.cpp  filters_cuda.cpp  filters_mpi.cpp  geometric.cpp  image.cpp  main.cpp  main_cuda.cpp  morphological.cpp  mpi_utils.cpp  noise.cpp  point_operations.cpp  point_operations_mpi.cpp
